objects/FieloCRUD__RelatedDetailsFields__c.object
<CustomObject>
    <fields>
        <fullName>FieloCRUD__FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldLookupFieldToShow__c</fullName>
        <defaultValue>&apos;Name&apos;</defaultValue>
        <inlineHelpText>Define the field API name (from the related object) that will be displayed on the picklist.</inlineHelpText>
        <label>Field To Show In Picklist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldLookupWhereCondition__c</fullName>
        <inlineHelpText>Define your WHERE condition clause for the object related through the lookup. You may include fields; ORDER BY and LIMIT clauses; and variables for Member Id, Account Id, Contact Id, UserId (ex. Member__c =: memberId)</inlineHelpText>
        <label>Where Condition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__FieldType__c</fullName>
        <inlineHelpText>Este campo se completa automÃ¡ticamente por trigger</inlineHelpText>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__RelatedDetailComponent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Detail Component</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloCRUD__PageComponent__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>RelatedDetails</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloCRUD__PageComponent__c</referenceTo>
        <relationshipName>Related_Details_Fields</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCRUD__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Related Detail Field</label>
    <nameField>
        <displayFormat>RDF-{0000}</displayFormat>
        <label>Related Details Fields #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Details Fields</pluralLabel>
    <recordTypes>
        <fullName>FieloCRUD__StandardField</fullName>
        <active>true</active>
        <description>Define a field that is going to be displayed in the Related Detail input table.</description>
        <label>Standard Field</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>